--- a/package.json
+++ b/package.json
@@ -36,6 +36,8 @@
   "author": "Fullstack Academy of Code",
   "license": "MIT",
   "dependencies": {
+    "@material-ui/core": "^4.11.3",
+    "@material-ui/icons": "^4.11.2",
     "axios": "^0.21.1",
     "compression": "^1.7.3",
     "connect-session-sequelize": "^6.1.1",
@@ -43,6 +45,7 @@
     "express-session": "^1.17.1",
     "history": "^4.10.1",
     "konva": "^7.2.5",
+    "material-ui-icons": "^1.0.0-beta.36",
     "morgan": "^1.10.0",
     "passport": "^0.4.1",
     "passport-google-oauth": "^2.0.0",
