--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "express": "^4.16.4",
     "express-session": "^1.17.1",
     "history": "^4.10.1",
+    "howler": "^2.2.1",
     "konva": "^7.2.5",
     "material-ui-icons": "^1.0.0-beta.36",
     "morgan": "^1.10.0",
