--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,10 @@
 node_modules
 public/bundle.js
 public/bundle.js.map
+public/0.bundle.js
+public/0.bundle.js.map
+public/1.bundle.js
+public/2.bundle.js.map
 secrets.js
 .DS_Store
 npm-debug.log
