--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,9 @@
+public/bundle.js
+public/bundle.js.map
+public/0.bundle.js
+public/0.bundle.js.map
+public/1.bundle.js
+public/2.bundle.js.map
 node_modules
 public/bundle.js
 public/bundle.js.map
