--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
   "dependencies": {
     "@material-ui/core": "^4.11.3",
     "@material-ui/icons": "^4.11.2",
+    "@material/card": "^10.0.0",
     "axios": "^0.21.1",
     "compression": "^1.7.3",
     "concurrently": "^6.0.0",
